[tool.poetry]
name = "repl-nix-evm-inscription"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_evm_inscription"}]

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^6.11.3"
eth-account = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
